# codespark

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  TASKS.md
.claude/: settings.json
.claude/hooks/: check-tests.sh
.githooks/: pre-commit  pre-push
.github/workflows/: release.yml
.omc/: project-memory.json
.omc/sessions/: 5224f2e9-7ee2-41e5-84a3-d4ee7765d4d2.json
.omc/state/: mission-state.json
.state/: pipeline.json
apps/macos/: project.yml
apps/macos/.omc/state/: last-tool-error.json
apps/macos/CLI/: main.swift
apps/macos/CodeSpark.xcodeproj/: project.pbxproj
apps/macos/CodeSpark/App/: CodeSparkApp.swift  CodeSparkWindow.swift
apps/macos/CodeSpark/Bridge/: ProjectCoreClient.swift  WorkspaceCoreClient.swift  project_core.swift  workspace_core.swift
apps/macos/CodeSpark/Models/: AppModel+Hook.swift  AppModel+Monitor.swift  AppModel.swift  ProjectViewData.swift  StorageKeys.swift  WorkspaceViewData.swift
apps/macos/CodeSpark/Services/: ClaudeHooksManager.swift  GitBranchService.swift  GitWorktreeService.swift  HookEventProcessor.swift  HookSocketServer.swift  SSHConnectionInfo.swift  TerminalFontSettings.swift  TerminalStateDetector.swift
apps/macos/CodeSpark/Terminal/: ClipboardImageHandler.swift  GhosttyRuntime.swift  GhosttyTerminalHost.swift  GhosttyTerminalSurfaceView.swift  KeyEventRouter.swift  NoOpTerminalHost.swift  TerminalHostProtocol.swift  TerminalSurfaceHostView.swift
apps/macos/CodeSpark/Theme/: AppTheme.swift
apps/macos/CodeSpark/Views/: AddWorktreeSheet.swift  ClosedSessionInspectorView.swift  MainContentView.swift  NewSSHProjectSheet.swift  OnboardingView.swift  RecentlyClosedSessionCardView.swift  SessionTabBarView.swift  SettingsView.swift  (+1 more)
apps/macos/CodeSparkTests/: AppModelTests.swift  ClipboardImageHandlerTests.swift  KeyEventRouterTests.swift  MockProjectCoreClient.swift  MockTerminalHost.swift  MockWorkspaceCoreClient.swift  ProjectFlowTests.swift  RecoveryActionsTests.swift  SSHConnectionInfoTests.swift  SSHIntegrationTests.swift  TerminalHostFactoryTests.swift  TerminalStateDetectorTests.swift  UIVerificationTests.swift  WorkspaceFlowTests.swift  WorkspaceSelectionTests.swift
apps/macos/CodeSparkUITests/: CodeSparkUITests.swift
apps/macos/StatefulTerminalTests/: AppModelTests.swift  MockTerminalHost.swift  MockWorkspaceCoreClient.swift  RecoveryActionsTests.swift  TerminalHostFactoryTests.swift  WorkspaceFlowTests.swift
crates/workspace-core/: Cargo.toml
crates/workspace-core/src/: error.rs  lib.rs  models.rs  restore.rs  snapshot.rs  store.rs  timeline.rs
crates/workspace-core/tests/: corrupt_data.rs  interrupted_recovery.rs  session_lifecycle.rs  snapshot_restore.rs  workspace_store.rs
crates/workspace-ffi/: Cargo.toml  build.rs
crates/workspace-ffi/src/: api.udl  lib.rs
crates/workspace-ffi/tests/: service_smoke.rs
docs/plans/: 2026-04-01-stateful-terminal.md  2026-04-03-enhanced-sidebar.md
docs/specs/: 2026-04-01-stateful-terminal-design.md
docs/superpowers/plans/: 2026-04-03-enhanced-sidebar.md
docs/superpowers/specs/: 2026-04-01-stateful-terminal-design.md  2026-04-03-enhanced-sidebar-design.md
libs/workspace-core/: build.zig  build.zig.zon
libs/workspace-core/include/: workspace_core.h
libs/workspace-core/src/: c_api.zig  lib.zig  models.zig  restore.zig  store.zig
libs/workspace-core/tests/: store_test.zig
scripts/: build-ghostty.sh  build-macos.sh  generate-swift-bindings.sh
(+27 files in other folders)
