[workspace]
members = ["crates/workspace-core"]
resolver = "2"

[patch.crates-io]
ahash = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ahash-0.8.12" }
bitflags = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bitflags-2.11.0" }
cc = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/cc-1.2.57" }
cfg-if = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/cfg-if-1.0.4" }
find-msvc-tools = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/find-msvc-tools-0.1.9" }
fallible-iterator = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/fallible-iterator-0.3.0" }
fallible-streaming-iterator = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/fallible-streaming-iterator-0.1.9" }
getrandom = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/getrandom-0.3.4" }
hashbrown = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/hashbrown-0.14.5" }
hashlink = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/hashlink-0.9.1" }
jobserver = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/jobserver-0.1.34" }
libc = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libc-0.2.183" }
libsqlite3-sys = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libsqlite3-sys-0.30.1" }
once_cell = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/once_cell-1.21.4" }
pkg-config = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/pkg-config-0.3.32" }
proc-macro2 = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/proc-macro2-1.0.106" }
quote = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/quote-1.0.45" }
rusqlite = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rusqlite-0.32.1" }
shlex = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/shlex-1.3.0" }
smallvec = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/smallvec-1.15.1" }
syn = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/syn-2.0.117" }
unicode-ident = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/unicode-ident-1.0.24" }
vcpkg = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/vcpkg-0.2.15" }
version_check = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/version_check-0.9.5" }
zerocopy = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/zerocopy-0.8.47" }
zerocopy-derive = { path = "/Users/jinto/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/zerocopy-derive-0.8.47" }
